@@ -19,15 +19,15 @@ import os
 import pytest
 from pathlib import Path
 
+import numpy as np
+
+from pyfmi import load_fmu
 from pyfmi.common.log import extract_xml_log, parse_xml_log
 from pyfmi.common.diagnostics import DIAGNOSTICS_PREFIX
 from pyfmi.test_util import Dummy_FMUModelME2
 from pyfmi.util import decode
-from pyfmi.fmi1 import FMUModelME1
-from pyfmi.fmi2 import FMUModelME2
-from pyfmi.fmi3 import FMUModelME3
 
-import numpy as np
+
 file_path = os.path.dirname(os.path.abspath(__file__))
 logs = os.path.join(file_path, "files", "Logs")
 
@@ -35,6 +35,17 @@ this_dir = Path(__file__).parent
 FMI1_REF_FMU_PATH = Path(this_dir) / 'files' / 'reference_fmus' / '1.0'
 FMI2_REF_FMU_PATH = Path(this_dir) / 'files' / 'reference_fmus' / '2.0'
 FMI3_REF_FMU_PATH = Path(this_dir) / 'files' / 'reference_fmus' / '3.0'
+
+
+@pytest.fixture(name="dahlquist_fmu" ,params=[
+        FMI1_REF_FMU_PATH / "me" / "Dahlquist.fmu",
+        FMI2_REF_FMU_PATH / "Dahlquist.fmu",
+        FMI3_REF_FMU_PATH / "Dahlquist.fmu",
+    ]
+)
+def fixture_dahlquist_fmu(request):
+    return load_fmu(request.param, log_level = 4)
+
 
 @pytest.mark.assimulo
 class Test_Log:
@@ -240,16 +251,9 @@ class Test_Log:
         assert not fmu.has_reached_max_log_size()
         assert trunc_log_len < len(fmu.get_log()), "Logging did not appear to resume"
 
-    @pytest.mark.parametrize("fmu_model_class, fmu_path",
-        [
-            (FMUModelME1, FMI1_REF_FMU_PATH / "me" / "Dahlquist.fmu"),
-            (FMUModelME2, FMI2_REF_FMU_PATH / "Dahlquist.fmu"),
-            (FMUModelME3, FMI3_REF_FMU_PATH / "Dahlquist.fmu"),
-        ]
-    )
-    def test_deactivate_logging(self, fmu_model_class, fmu_path):
+    def test_deactivate_logging(self, dahlquist_fmu):
         """Test that logging is automatically disabled upon reaching maximal log size."""
-        fmu = fmu_model_class(fmu_path, log_level = 4)
+        fmu = dahlquist_fmu
         fmu.append_log_message("Testing", 4, "additional logging")
         assert not fmu.has_reached_max_log_size()
         assert fmu.get_log_level() == 4
@@ -258,3 +262,16 @@ class Test_Log:
         fmu.append_log_message("Testing", 4, "additional logging")
         assert fmu.has_reached_max_log_size()
         assert fmu.get_log_level() == 0
+    
+    def test_given_max_log_size_when_reset_then_log_size_resets(self, dahlquist_fmu):
+        # Given
+        fmu = dahlquist_fmu
+        fmu.set_max_log_size(10)
+        fmu.append_log_message("Testing", 4, "additional logging" * 20)
+        assert fmu.has_reached_max_log_size()
+        
+        # When
+        fmu.reset()
+
+        # Then
+        assert not fmu.has_reached_max_log_size()
