@@ -12,6 +12,7 @@
     * Logging will (by default) be explicitly be disabled by calling `fmiSetDebugLogging` 
       and setting `log_level` to `0` when exceeding `set_max_log_size`.
     * Dropping support for Python 3.9 as it is now end of life.
+    * Fixed so FMU `reset` resets log size so max log size is per simulation and does not carry over.
 
 --- PyFMI-2.18.3 ---
     * Fixed a bug introduced in PyFMI 2.18.0 causing incorrect result storing for `boolean` and `enum` variables
